examples/type_system/failing/12_generic_mismatch.flx
// parity-expected-stdout-begin
// parity-expected-stdout-end
// parity-expected-stderr-begin
// • 1 error • examples/type_system/failing/12_generic_mismatch.flx
// error[E300]: Argument Type Mismatch
//
// I found the wrong type in the 2nd argument to `both`.
//
//   examples/type_system/failing/12_generic_mismatch.flx:36:10
//    |
// 34 | fn both<T>(a: T, b: T) -> T { a }
//    | --------------------------- `both` expects `Int` as the 2nd parameter
// 35 |
// 36 | both(42, "hello")
//    |          ^^^^^^^
//    |          ------- this argument has type `String`
//
// Note:
//   expected argument type: Int
//   found argument type: String
//   the actual argument type is inferred from this expression
//   the expected argument type comes from the function signature
//
// Help:
//   Pass a `Int` value as the 2nd argument.
// parity-expected-stderr-end
// expect: compile_error
// expect-error: E300

// E300: type variable T cannot be unified as both Int and String.
// A generic function declared with a single type parameter T requires all
// arguments annotated as T to receive values of the same concrete type.

fn both<T>(a: T, b: T) -> T { a }

both(42, "hello")
